--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,5 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
 tracing-actix-web = "0.7.18"
 url = "2.5.4"
 uuid = { version = "1.17.0", features = ["serde", "v4"] }
+base64 = "0.22.1"
 
